<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/login_form"
    tools:context=".LoginActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Footer aligned to bottom -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_footer"
        android:gravity="center" >
            <TextView
                android:id="@+id/signup"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        >
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="140dp"
                android:src="@drawable/logo"
                android:layout_height="160dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/logo" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceMedium"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:layout_weight="0.31"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>