<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/login_form"
    tools:context=".LoginActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        >
        <LinearLayout
            android:id="@+id/create_account_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="140dp"
                android:src="@drawable/logo"
                android:layout_height="160dp"
                android:layout_marginBottom="25dp"
                android:paddingTop="0dp"
                android:contentDescription="@string/logo" />

            <!-- compulsory email field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:weightSum="2" >

                <EditText
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>

            </LinearLayout>

            <!-- compulsory password field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:selectAllOnFocus="true"/>
            </LinearLayout>

            <!-- compulsory confirm password field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/register"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </LinearLayout>

            <!-- compulsory confirm password field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:orientation="horizontal">



            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceMedium"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"/>
        </LinearLayout>
    </ScrollView>

    <!-- Footer aligned to bottom -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_footer"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/signin"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/existing_account"
            android:textSize="20sp"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center"/>
    </RelativeLayout>
</RelativeLayout>